[CDAP-13054] Fix z-index for the generic PlusButton component
  - Fixes the sub-panel layout in dataprep connections because of increase in the height of tab section in dataprep
    This is to show the path (breadcrumbs) and the search textbox side-by-side in the dataprep connections view
    so that we can have one single consistent height across all browser sizes. This is to prevent scrollbars
    added to the entire dataprep table which will make the dataprep connections looks dangling out.

  - Increases the maxTabs space calculation to include PlusButton

--- a/cdap-ui/app/cdap/components/DataPrep/DataPrep.scss
+++ b/cdap-ui/app/cdap/components/DataPrep/DataPrep.scss
@@ -57,6 +57,9 @@ $toggle-btn-disabled-bg-color: #cccccc;
         width: 100%;
         height: 100%;
         color: white;
+        display: flex;
+        align-items: center;
+        justify-content: center;
       }
 
       &:hover {
