--- a/cdap-ui/app/cdap/components/EntityListView/EntityListHeader/EntityListHeader.scss
+++ b/cdap-ui/app/cdap/components/EntityListView/EntityListHeader/EntityListHeader.scss
@@ -33,7 +33,6 @@ $margin-to-border: 0.5rem;
 
   .plus-button {
     margin: 20px 20px 0;
-    z-index: 1061;
     .popper {
       display: none;
     }
